// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid render should render a Column 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  width: 8.333333333333332%;
  padding-top: space0;
  padding-bottom: space0;
  padding-right: space0;
  padding-left: space0;
}

<div
    class="emotion-0"
    data-paste-element="COLUMN"
  >
    child
  </div>
</DocumentFragment>
`;

exports[`Grid render should render a Grid 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: size0;
}

<div
    class="emotion-0"
    data-paste-element="GRID"
  >
    child
  </div>
</DocumentFragment>
`;

exports[`Grid render should render a Grid as any HTML element 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: size0;
}

<section
    class="emotion-0"
    data-paste-element="GRID"
  >
    child
  </section>
</DocumentFragment>
`;

exports[`Grid render should render responsive css 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: flex;
  margin-right: auto;
  margin-left: auto;
  min-width: size0;
}

@media screen and (min-width: 40em) {
  .emotion-0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    margin-right: auto;
    margin-left: auto;
  }
}

@media screen and (min-width: 52em) {
  .emotion-0 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    margin-right: spaceNegative30;
    margin-left: spaceNegative30;
  }
}

.emotion-1 {
  box-sizing: border-box;
  width: 16.666666666666664%;
  padding-top: space10;
  padding-bottom: space10;
  padding-right: space0;
  padding-left: space0;
  margin-left: 66.66666666666666%;
}

@media screen and (min-width: 40em) {
  .emotion-1 {
    width: 33.33333333333333%;
    padding-top: space20;
    padding-bottom: space20;
    padding-right: space0;
    padding-left: space0;
    margin-left: 50%;
  }
}

@media screen and (min-width: 52em) {
  .emotion-1 {
    width: 16.666666666666664%;
    padding-top: space0;
    padding-bottom: space0;
    padding-right: space30;
    padding-left: space30;
    margin-left: 66.66666666666666%;
  }
}

.emotion-2 {
  box-sizing: border-box;
  width: 50%;
  padding-top: space10;
  padding-bottom: space10;
  padding-right: space0;
  padding-left: space0;
  min-width: 100%;
  margin-left: space0;
}

@media screen and (min-width: 40em) {
  .emotion-2 {
    padding-top: space20;
    padding-bottom: space20;
    padding-right: space0;
    padding-left: space0;
    min-width: 100%;
  }
}

@media screen and (min-width: 52em) {
  .emotion-2 {
    padding-top: space0;
    padding-bottom: space0;
    padding-right: space30;
    padding-left: space30;
    min-width: 0;
  }
}

<div
    class="emotion-0"
    data-paste-element="GRID"
  >
    <div
      class="emotion-1"
      data-paste-element="COLUMN"
    />
    <div
      class="emotion-2"
      data-paste-element="COLUMN"
    />
  </div>
</DocumentFragment>
`;
